# europeishot

./: .gitignore  README.md  data_model_mock.py  database.env.template  docker-compose.yaml  export_vars.sh  openweather.env.template  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile  api.py  app.py  data.json  requirements.txt  start.sh  temp_request.py  update-temps-crontab
backend/sql/: get_locations.sql  insert_data.sql  select_latest.sql
backend/src/: db.rs  errors.rs  main.rs  models.rs
database/init/: createdb.sql
frontend/: package-lock.json  package.json
frontend/src/routes/: +layout.svelte  +page.svelte  Header.svelte  Table.svelte  styles.css
frontend/src/routes/about/: +page.svelte
src/: App.vue  main.js
src/components/: Info.vue  TableRow.vue  TempTable.vue
src/styles/: _variables.scss  index.css
