[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.8"
derive_more = "0.99.17"
rand = "0.8.5"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
chrono = "0.4.26"
cron = "0.12.0"

[dependencies.deadpool-postgres]
version = "0.10.5"
features = ["serde"]

[dependencies.serde]
version = "1.0.164"
features = ["derive"]

[dependencies.actix-web]
version = "4"

[dependencies.reqwest]
version = "0.11.18"
features = ["json"]
